# sprinter-plugins

./: CMakeLists.txt  TODO
a/: a.cpp  a.h
activities/: CMakeLists.txt  Messages.sh  activities.cpp  activities.h  activities.json  plasma-runner-activityrunner.desktop  sprinter-activities.desktop
applications/: CMakeLists.txt  Messages.sh  applications.cpp  applications.h  applications.json  sprinter-applications.desktop
b/: b.cpp  b.h
c/: CMakeLists.txt  c.cpp  c.h  c.json
calculator/: CMakeLists.txt  Messages.sh  calculator.cpp  calculator.h  calculator.json  qalculate_engine.cpp  qalculate_engine.h  sprinter-calculator.desktop
cmake/modules/: FindKSysguardProc.cmake
d/: d.cpp  d.h
datetime/: CMakeLists.txt  Messages.sh  datetime.cpp  datetime.h  datetime.json  sprinter-datetime.desktop
filesystem/: CMakeLists.txt  Messages.sh  filesystem.cpp  filesystem.h  filesystem.json
kill/: CMakeLists.txt  Messages.sh  kill.cpp  kill.h  kill.json
places/: CMakeLists.txt  places.cpp  places.h  places.json  sprinter-places.desktop
powerdevil/: CMakeLists.txt  powerdevil.cpp  powerdevil.h  powerdevil.json  sprinter-powerdevil.desktop
recentdocs/: CMakeLists.txt  recentdocs.cpp  recentdocs.desktop  recentdocs.h  recentdocs.json  sprinter-recentdocs.desktop
tools/: CMakeLists.txt  pluginInfoGenerator.cc  pluginInfoGenerator.cpp  runnerhelpers.h
uri/: CMakeLists.txt  sprinter-uri.desktop  uri.cpp  uri.desktop  uri.h  uri.json
windows/: CMakeLists.txt  Messages.sh  sprinter-windows.desktop  windows.cpp  windows.h  windows.json
youtube/: CMakeLists.txt  sprinter-youtube.desktop  youtube.cpp  youtube.h  youtube.json
